[gd_scene load_steps=7 format=3 uid="uid://j54v88xvtgo0"]

[ext_resource type="Script" uid="uid://cxa46504cs0kr" path="res://managers/profile_manager.gd" id="1_4wmm3"]
[ext_resource type="Script" uid="uid://byypfyfqmolqw" path="res://managers/saved_player_manager.gd" id="2_ouv4w"]
[ext_resource type="Script" uid="uid://c7uttpvp0cny8" path="res://managers/team_manager.gd" id="3_cx50v"]
[ext_resource type="Script" uid="uid://bbr3h0xmtmisx" path="res://managers/available_player_manager.gd" id="3_ouv4w"]
[ext_resource type="Script" uid="uid://bkur30acldlcr" path="res://managers/attributes_manager.gd" id="4_lcms1"]
[ext_resource type="Script" uid="uid://c0agq5wv2c3ir" path="res://managers/saved_profiles_manager.gd" id="6_cx50v"]

[node name="ProfileManager" type="Node"]
script = ExtResource("1_4wmm3")

[node name="SavedPlayerManager" type="Node" parent="."]
script = ExtResource("2_ouv4w")

[node name="AttributesManager" type="Node" parent="."]
script = ExtResource("4_lcms1")

[node name="AvailablePlayerManager" type="Node" parent="."]
script = ExtResource("3_ouv4w")

[node name="TeamManager" type="Node" parent="."]
script = ExtResource("3_cx50v")

[node name="SavedProfilesManager" type="Node" parent="."]
script = ExtResource("6_cx50v")
